Mas correcciones y fuentes

--- a/report/bibliografia.bib
+++ b/report/bibliografia.bib
@@ -156,6 +156,14 @@
   publisher = "Elsevier"
 }
 
+@InProceedings{richter:lama,
+    author = {Silvia Richter and Matthias Westphal},
+    title = {The {L}{A}{M}{A} planner: Guiding cost-based anytime planning with landmarks},
+    year = {2010},
+    booktitle = "Journal of Artificial Intelligence Research 39",
+    pages = "127--177"
+}
+
 @Misc{rintanen:notes,
   author = "J. Rintanen", 
   title = "Introduction to automated planning, course notes",
@@ -206,4 +214,12 @@
   title = "Introduction to Algorithms",
   year = "1990",
   publisher = "MIT Press"
+}
+
+@InProceedings{chen:random:qbf,
+    author = {Hubie Chen and Departament De Tecnologia},
+    title = {A Model for Generating Random Quantified Boolean Formulas},
+    booktitle = {In Proc. of 9th International Joint Conference on Artificial Intelligence (IJCAI05},
+    year = {2005},
+    pages = {66--71}
 }
