--- a/report/capitulos/capitulo4.tex
+++ b/report/capitulos/capitulo4.tex
@@ -491,7 +491,7 @@ resueltas donde hay solución).
 \begin{table}[h!]
 \centering
   \begin{tabular}{lllrrrrrrrrrl}
-    \multicolumn{10}{@{}c}{\footnotesize\qEA-QBF: $\pwin=[]$} \\
+    \multicolumn{10}{@{}c}{\footnotesize\qEA-QBF} \\
     \midrule
     %\toprule
     & $\#\exists$ & $\#\forall$ &             & $n$ & $+$ & $-$ & tiempo &   long. plan &  \\
@@ -519,7 +519,7 @@ todos los modelos posibles de dos variables independientes.
 \begin{table}[h!]
 \centering
   \begin{tabular}{lllrrrrrrrrrl}
-    \multicolumn{10}{@{}c}{\footnotesize\qEAE-QBF: $\pwin=[]$} \\
+    \multicolumn{10}{@{}c}{\footnotesize\qEAE-QBF} \\
     \midrule
     & $\#\exists$ & $\#\forall$ & $\#\exists$ & $n$ & $+$ & $-$ & tiempo &   long. plan &  \\
     \midrule
@@ -545,7 +545,7 @@ responsables por un crecimiento exponencial en el tamaño del plan).
 \begin{table}[h!]
 \centering
   \begin{tabular}{lllrrrrrrrrrl}
-    \multicolumn{10}{@{}c}{\footnotesize\qAE-QBF: $\pwin=[]$} \\
+    \multicolumn{10}{@{}c}{\footnotesize\qAE-QBF} \\
     \midrule
     & $\#\forall$ & $\#\exists$ &             & $n$ & $+$ & $-$ & tiempo & long. plan &  \\
     \midrule
@@ -573,7 +573,7 @@ planes sea mucho mayor.
 \begin{table}[h!]
 \centering
   \begin{tabular}{lllrrrrrrrrrl}
-    \multicolumn{10}{@{}c}{\footnotesize\qAEA-QBF: $\pwin=[]$} \\
+    \multicolumn{10}{@{}c}{\footnotesize\qAEA-QBF} \\
     \midrule
     & $\#\forall$ & $\#\exists$ & $\#\forall$ & $n$ & $+$ & $-$ & tiempo &   long. plan &  \\
     \midrule
