--- a/report/apendices/apendiceA.tex
+++ b/report/apendices/apendiceA.tex
@@ -10,6 +10,8 @@ CADA DOMINIO, Y EJEMPLOS DE IMÁGENES CON GRAFOS ***
 \section{Problemas NP}
 
 \subsection{SAT, Satisfacibilidad proposicional}
+Existe una asignación de verdad $T$, tal que para toda cláusula $y$, existe una variable $x$, tal que:
+$x$ esta positiva en $y$ y $T(x)$, o $x$ esta negativa en $y$ y $not-T(x)$,
 \begin{verbatim}
 (so-exists (?T 1)
   (forall (?y)
@@ -22,6 +24,7 @@ CADA DOMINIO, Y EJEMPLOS DE IMÁGENES CON GRAFOS ***
 \end{verbatim}
 
 \subsection{CLIQUE, Clique de tamaño $k$}
+
 \begin{verbatim}
 (so-exists (?F Inj)
   (and (forall (?y) (exists (?x) (?F ?x ?y)))  ; totality
@@ -44,6 +47,9 @@ $k = 6$}
 \end{verbatim}
 
 \subsection{\CHD, Camino Hamiltoniano Dirigido}
+Esta fórmula expresa que existe una manera ordenada $F(a,b)$ de visitar los nodos de grafo (la posición $a$ la tiene el nodo $b$), en
+la que para toda posición $x$, si no es la última, entonces existe un nodo $y1$ que le corresponde esta posición, y además
+a la siguiente posición $x2$ le corresponde otro nodo $y2$, y hay un arco entre $y1$ y $y2$.
 \begin{verbatim}
 (so-exists (?F Inj)
   (forall (?x)
@@ -73,6 +79,9 @@ $k = 6$}
 \end{verbatim}
 
 \subsection{\TCOL, 3-colorabilidad}
+Esta fórmula expresa que existe una asignación de colores $R$, $G$ y $B$ tal que para todos los nodos
+de un grafo, no hay dos vertices adyacentes del mismo color, los vertices tienen
+almenos y a lo sumo un color.
 \begin{verbatim}
 (so-exists (?R 1) (so-exists (?G 1) (so-exists (?B 1)
   (forall (?x) 
@@ -93,6 +102,11 @@ $k = 6$}
 \end{verbatim}
 
 \subsection{\KCOL, k-colorabilidad}
+Esta fórmula expresa que existe una función de asignación de colores $F$, tal que a todo nodo se le es
+asignado un color $y$, donde $K(y)$ quiere decir que el color $y$ es menor al máximo color
+$k$; ademá, para todos los otros nodos, si este esta conectado a ellos, no
+tienen el mismo color.
+
 \begin{verbatim}
 (so-exists (?F Func)
   (forall (?x) 
@@ -106,6 +120,10 @@ $k = 6$}
 \section{Problemas PH}
 
 \subsection{UNSAT, No-Satisfacibilidad proposicional}
+Esta fórmula expresa que para toda relación $T$ sobre variables
+proposicionales, existe una cláusula $y$ tal que para cada variable $x$, o $x$
+aparece positiva en $y$ y $x$ es falsa, o $x$ aparece negativa en $y$ y $x$ es
+verdadera, o $x$ no aparece en $y$.
 \begin{verbatim}
 (so-forall (?T 1 @ist)
     (exists (?y @cls)
@@ -121,6 +139,11 @@ $k = 6$}
 \end{verbatim}
 
 \subsection{\qEA-QBF, Fórmula \textit{booleana} cuantificada $\Sigma_p^2$}
+Esta fórmula expresa que existe una relación $E0$ sobre variables
+proposicionales, tal que para toda relación $A0$ sobre variables
+proposicionales, Para toda cláusula $c$ existe una variable $x$, tal que: o $x$ aparece
+positiva en $c$ y es verdadera existencial o universalmente, o $x$ aparece negativa en $c$ y
+es negativa existencial o universalmente.
 \begin{verbatim}
 (so-exists (?E0 1 @ise0)
     (so-forall (?A0 1 @isa0)
@@ -135,7 +158,8 @@ $k = 6$}
 \end{verbatim}
 
 \subsection{\coCOL, No-3-Colorabilidad}
-
+Esta fórmula expresa que para toda posible coloración de nodos $R$, $G$ y $not-G \land not-R$, o dos nodos unidos por un arco tienen
+el mismo color, o un nodo tiene dos colores al mismo tiempo.
 \begin{verbatim}
 (so-forall (?R 1 @node)
     (so-forall (?G 1 @node)
