Todo listo menos Apendice A, segundo envio a Blai

--- a/report/bibliografia.bib
+++ b/report/bibliografia.bib
@@ -217,9 +217,9 @@
 }
 
 @InProceedings{chen:random:qbf,
-    author = {Hubie Chen and Departament De Tecnologia},
+    author = {Hubie Chen and Y. Interian},
     title = {A Model for Generating Random Quantified Boolean Formulas},
-    booktitle = {In Proc. of 9th International Joint Conference on Artificial Intelligence (IJCAI05},
+    booktitle = {In Proc. of 9th International Joint Conference on Artificial Intelligence},
     year = {2005},
     pages = {66--71}
 }
