--- a/report/capitulos/capitulo3.tex
+++ b/report/capitulos/capitulo3.tex
@@ -46,8 +46,8 @@ solucionables en tiempo polinomial no determinístico.
 Esto se debe a que los problemas de esta clase sólo admiten planes
 de longitud exponencial en el peor caso ya que PH contiene, además de a NP, las
 clases coNP y $\Sigma^p_k$ para todo $k\geq 1$. La clase $\Sigma_p^2$, por
-ejemplo, es igual a $P^{NP}$, la clase de problemas resolubles en tiempo
-polinomial contando un oráculo para resolver problemas NP.
+ejemplo, es igual a $NP^{NP}$, la clase de problemas resolubles en tiempo
+polinomial no determinístico contando un oráculo para resolver problemas NP.
 
 Una característica de NP es la 
 disponibilidad de un \textit{certificado} que valida en tiempo polinomial una
