--- a/report/capitulos/capitulo4.tex
+++ b/report/capitulos/capitulo4.tex
@@ -418,7 +418,7 @@ Para cada instancia, la tabla muestra el número cromático $\chi$, el tiempo
 (en segundos) para demostrar o descartar la $k$-colorabilidad para valores
 incrementales de $k$.
 El último valor de $k$ para cada instancia es el número cromático.}
-\label{table:chromatic}
+\label{chromatic}
 \end{table}
 
 Nótese que los mayores tiempos de corrida corresponden generalmente a
@@ -487,7 +487,6 @@ resueltas con solución ($+$) y en las que no hay solución ($-$), y promedios
 de tiempo en segundos y longitud del plan paralelo (para las instancias
 resueltas donde hay solución).
 
-*** ALDO: COLOCAR VENTANAS PARA LOS QBF ***
 \begin{table}[h!]
 \centering
   \begin{tabular}{lllrrrrrrrrrl}
