--- a/report/capitulos/conclusiones.tex
+++ b/report/capitulos/conclusiones.tex
@@ -16,7 +16,7 @@ problemas NP a STRIPS. Esta salida puede utilizarse con un planificador
 para obtener una solución al problema original.
 
 Los resultados de los experimentos muestran que la herramienta puede utilizarse
-para crear solucionadores a problemas específicos NP o PH que tienen un buen desempeño
+para crear solucionadores a problemas específicos en NP o PH que tienen un buen desempeño
 sobre problemas pequeños. Así, por ejemplo, un profesional del área de
 computación que tenga la necesidad de resolver problemas pequeños de grafos, o
 requiera realizar pruebas de concepto para estudiar problemas académicos o de la vida
@@ -55,9 +55,10 @@ medida de comparación entre diferentes enfoques a cómo construir planificadore
 generales y eficientes, particularmente en el caso de \textit{SAT-planners} y
 en la búsqueda de planes paralelos.
 
-La reducción a NP presentada en ese trabajo fue presentada en el mes de junio
+La reducción a NP presentada en este trabajo fue presentada en el mes de junio
 de 2011 en la Conferencia Internacional de
-Planificación Automática (ICAPS '11) en la ciudad de Freiburg, Alemania.
+Planificación Automática (ICAPS '11) en la ciudad de Freiburg, Alemania
+\citep{porco:npreductions}.
 La extensión a la herramienta que le permite procesar problemas en PH ha sido
 propuesta como artículo de investigación corto en ICAPS '13, conferencia que
 tendrá lugar en Roma, Italia. Se recibirán noticias sobre su aceptación en
