Agrega imagen de 3DM a referencias

--- a/report/bibliografia.bib
+++ b/report/bibliografia.bib
@@ -223,3 +223,11 @@
     year = {2005},
     pages = {66--71}
 }
+
+@misc{wiki:3dm,
+   author = "Wikipedia",
+   title = "3-dimensional matchings --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2004",
+   url = "http://en.wikipedia.org/wiki/File:3-dimensional-matching.svg",
+   note = "[en línea; accedido el 5 de diciembre de 2012]"
+}
