--- a/report/capitulos/introduccion.tex
+++ b/report/capitulos/introduccion.tex
@@ -38,7 +38,7 @@ el estado inicial hasta un estado final, o determinar que tal secuencia de
 acciones no existe.
 
 Este trabajo se enfoca en el desarrollo de una herramienta que permite
-traducir o, en lenguaje más formal, \textbf{reducir} un problema de
+\textbf{reducir} un problema de
 decisión perteneciente a las clases NP o PH codificado en lógica de segundo orden,
 a un problema de planificación automática. 
 La motivación para realizar esta herramienta es que
@@ -83,8 +83,7 @@ planificación automática.
 
 El objetivo general del proyecto es permitir la resolución de problemas
 NP y de la jerarquía polinomial (PH) expresados a través de un lenguaje declarativo basado en 
-la lógica de segundo orden.
-Al alcanzar este objetivo, problemas cuya aplicación es
+la lógica de segundo orden.  Así, problemas cuya aplicación es
 ampliamente conocida en Ciencias de la Computación podrán ser expresados
 en un lenguaje conciso y ser resueltos sin la intervención del usuario luego de
 la fase de modelación.
@@ -119,7 +118,7 @@ polinomial.
 El capítulo 4 trata sobre cómo fueron diseñados y llevados a
 cabo experimentos sobre diferentes problemas en NP y PH traducidos con la herramienta,
 además de ofrecer una discusión de los resultados obtenidos. Finalmente, el
-capítulo 5 contiene conclusiones, recomendaciones e ideas para trabajos
+capítulo 5 contiene conclusiones e ideas para trabajos
 futuros.
 
 Parte de este trabajo ha sido publicado en la \textit{21st International Conference on
