--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -4,7 +4,7 @@
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[fixlanguage]{babelbib}
-\usepackage{hyphenat}
+\usepackage{paquetes/hyphenat}
 
 \usepackage{natbib}
 \usepackage{verbatim}
@@ -18,14 +18,14 @@
 \usepackage{amsthm}
 \usepackage{amssymb}
 \usepackage{amsfonts}
-\usepackage{algorithmic}
-\usepackage{algorithm}
+\usepackage{paquetes/algorithmic}
+\usepackage{paquetes/algorithm}
 \usepackage{float}
-\usepackage{epigraph}
+\usepackage{paquetes/epigraph}
 \usepackage{array}
 \usepackage{tabularx}
 \usepackage{caption}
-\usepackage{multirow}
+\usepackage{paquetes/multirow}
 \usepackage{lscape}
 %:%s/\(bibitem.\+\)and/\1y/g
 %\usepackage[letterpaper, inner=3cm, outer=2cm]{geometry}
@@ -169,7 +169,7 @@
 Presentado ante la Ilustre Universidad Simón Bolívar \\
 como requisito parcial para optar al título de \\
 Ingeniero de Computación}
-    \date{Sartenejas, Noviembre de 2012}
+    \date{Sartenejas, Diciembre de 2012}
 \end{titlepage}
 %%%% Título
 
